--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
   <head>
     <meta charset="utf-8"/>
     <title>tag editor custom component example</title>
-    <link rel="stylesheet" href="./build/style.css">
+    <link rel="stylesheet" href="./build/build.css">
     <script src="./build/build.js"></script>
   </head>
   <body>
+    <div>
+      <ul>
+        <li v-repeat="routes">
+        <a href="#!/{{$value}}" v-class="current:currentView == $value">{{$value}}</a>
+        </li>
+      </ul>
+      <div v-view="currentView" class="view" v-with="global:data" v-transition>
+        <p>Hello! {{msg}} {{global.test}}</p>
+      </div>
+    </div>
     <script>require('vue-routing-sample');</script>
   </body>
 </html>
